# Yet-Another-C-Compiler

./: .gitignore  1705069.l  1705069.y  CMakeLists.txt  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_PROGRESS.md  Makefile  PHASE1_SUMMARY.md  README.md  README_NEW.md  REFACTORING_PROGRESS.md  SESSION_SUMMARY.md  asmUtils.h  generate_golden.sh  script.sh  test_backend.sh  test_golden.sh  test_optimizer.sh
AsmLibraries/: outdec.h
Offline 1 - Symbol Table/: hashTable  hashTable.cpp
Offline 1 - Symbol Table/SymbolTable/: ScopeTable.h  SymbolInfo.h  SymbolTable.h  a.out  input5.txt  main  main.cpp  output.txt  test  test.cpp
Offline 2 - Lexical Analyser/: clarification.txt  test  test.cpp
Offline 2 - Lexical Analyser/1705069/: LexAnalyzer.c  LexAnalyzer.cpp  LexAnalyzer.l  LexAnalyzer.out  LexUtils.h  clean.sh  command.sh  input.txt  log.txt  token.txt
Offline 2 - Lexical Analyser/1705069/SymbolTable/: ScopeTable.h  SymbolInfo.h  SymbolTable.h
Offline 2 - Lexical Analyser/1705069/test/: #test.cpp#  a.out  test  test.cpp
Offline 2 - Lexical Analyser/Lex Resources/: .~lock.ANSI C - Lex Spec.odt#
Offline 3 - Syntax & Semantic Analyser/1705069/: 1705069.l  1705069.y  GrammarParser.y  LexAnalyzer.l  LexUtils.h  ParserUtils.h  a.out  clean.sh  error.txt  input.txt  lex.yy.c  log.txt  run.sh  script.sh  y.output  y.tab.c  y.tab.h
Offline 3 - Syntax & Semantic Analyser/1705069/SymbolTable/: ScopeTable.h  SymbolInfo.h  SymbolTable.h
Offline 3 - Syntax & Semantic Analyser/democodes/simplecalc/: a.out
Offline 3 - Syntax & Semantic Analyser/democodes/simplecalcmodified/: a.out
Offline 4 - Intermediate Code Generator/: ADVANCED_OPTIMIZATIONS.md  FINAL_SUMMARY.md  PROGRESS.md
Offline 4 - Intermediate Code Generator/1705069/: 1705069.l  1705069.y  Dockerfile  LexUtils.h  ParserUtils.h  a.out  asmUtils.h  code.asm  error.txt  input.c  input.txt  lex.yy.c  log.txt  optimized-code.asm  script.sh  test  test.cpp  y.output  y.tab.c  y.tab.h
Offline 4 - Intermediate Code Generator/1705069/AsmLibraries/: outdec.h
Offline 4 - Intermediate Code Generator/1705069/SymbolTable/: SymbolInfo.h  SymbolTable.h
Offline 4 - Intermediate Code Generator/Sample Output/Sample-1/: log.txt  optimized_code.asm
Offline 4 - Intermediate Code Generator/Sample Output/Sample-2/: exp.c  log.txt  optimized_code.asm
SymbolTable/: SymbolTable.h
Test Cases/: recursion.c
docs/: ARCHITECTURE.md  PROJECT_OVERVIEW.md  deep-dive.md
include/: AsmUtils.h  CompilerGlobals.h  LexUtils.h
include/yac/AST/: AST.h  ASTVisitor.h
include/yac/Basic/: Diagnostic.h  SourceLocation.h
include/yac/CodeGen/: IR.h  IRBuilder.h  IRVerifier.h  Pass.h  RegisterAllocator.h  Transforms.h  X86_64Backend.h
include/yac/Parse/: Lexer.h  Parser.h  Token.h
include/yac/Sema/: Sema.h  SymbolTable.h
include/yac/Type/: Type.h
legacy/: ParserUtils.h
legacy/SymbolTable/: ScopeTable.h
lib/: CMakeLists.txt
lib/AST/: AST.cpp  ASTVisitor.cpp
lib/Basic/: Diagnostic.cpp
lib/CodeGen/: IR.cpp  IRBuilder.cpp  IRVerifier.cpp  Pass.cpp  RegisterAllocator.cpp  Transforms.cpp  X86_64Backend.cpp
lib/Parse/: Lexer.cpp  Parser.cpp  Token.cpp
lib/Sema/: Sema.cpp  SymbolTable.cpp
lib/Type/: Type.cpp
src/: AsmUtils.cpp  Globals.cpp  LexUtils.cpp  main.cpp
test/: CMakeLists.txt
test/fixtures/: const_test.c  control_flow.c  expressions.c  loop_test.c  loops.c  semantic_errors.c  simple.c  simple.c.ir  simple.c.s
test/golden/: README.md
test/golden/O0/: loop_test.ir  simple.ir  simple_loop.ir  two_vars.ir
test/golden/O1/: loop_test.ir  simple_loop.ir
test/golden/O2/: loop_test.ir  simple.ir  simple_loop.ir  two_vars.ir
test/integration/: CMakeLists.txt  test_runner.cpp
test/unit/: test_ast.cpp  test_diagnostic.cpp  test_type.cpp
tools/: CMakeLists.txt
tools/yac/: main.cpp
